Working on a benchmark.